try to fix index page jumping on scroll on Chrome mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -60,12 +60,18 @@ code {
 }
 
 /* index */
-.index .about { font-size: 1.5em; text-align: right; padding-top: 2rem; }
-.index .about-row { padding-top: 4rem; }
-.index .about h2 { font-size: 2em; }
-.index .doctitle { display: none; }
+.index .about {
+    text-align: right;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 1.5em;
+    padding-left: 2rem;
+}
+.index .about a {
+    white-space: nowrap;
+}
 
-.index h1 { font-size: 3em; }
 .index nav#sitenav { text-align: left; }
 .logo {
     font-family: 'euphoria script', serif;
@@ -83,15 +89,8 @@ code {
 .logo a:hover, .logo a:visited:hover {
     color: var(--colour-highlight-fg);
 }
-.index .logo {
-    font-size: 20em;
-    margin-right: 1.5rem;
-    margin-bottom: -5rem;
-    margin-top: -9rem;
-}
-.index h3 {
-    font-size: 1.3em;
-}
+.index .logo { font-size: 20em; }
+.index h3 { font-size: 1.3em; }
 .index .sidebar { margin-top: 1em; }
 .index time {
     font-style: italic;
